# WriteTon

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  install.sh
.github/workflows/: rust-clippy.yml
src/: cli.rs  database.rs  main.rs  models.rs
src/commands/: hello.rs  list.rs  new.rs  remove.rs
src/utils/: mod.rs  random_id.rs  truncate.rs
