[package]
name = "writeton"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
dirs = "3.0"
nanoid = "0.4.0"
tabled = { version = "0.15.0", features = ["ansi"] } 
chrono = "0.4.19"
# crossterm = "0.27.0"
# ratatui = "0.26.1"
